--- a/views/metrics.ejs
+++ b/views/metrics.ejs
@@ -65,6 +65,19 @@
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
+                  <h5 class="card-title">Delete metric</h5>
+                  <form action="/delete" method="POST"> 
+                  <div class="form-group">
+                    <input name="time" class="form-control" id="exampleInputPassword1" placeholder="timestamp">
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
                   <h5 class="card-title">Visualization of Metrics</h5>
                     <canvas id="myChart"></canvas>
                 </div>
