--- a/views/user.ejs
+++ b/views/user.ejs
@@ -53,7 +53,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Email</h5>
-                  <p class="card-text"><%- user.mail %></p>
+                  <p class="card-text"><%- mail %></p>
                 </div>
               </div>
             </div>
