--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-
     <head>
         <meta charset="UTF-8" />
-        <title>Menu</title>
-        <link rel="stylesheet" type="text/css" href="/css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="/css/style.css" />
+        <title>Projet node JS </title>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body>
-        <img src="images/SoryAnas.PNG" alt="SoryAnas" width="100" height="100">
-        <img src="images/PierreLouisDeSoultrait.PNG" alt="PierreLouisDeSoultrait" width="100" height="100">
-        <img src="images/Adrien.PNG" alt="Adrien" width="100" height="100">
         <div class="container">
-            <div class="codrops-top">
-                <span class="right"></span>
-            </div>
             <header>
-                <h1>Menu</h1>	
-                <% if (user) { %>
-                    Hello, <%- user.name %>!
-                <% } %>
+                <h1>Projet Nodejs</h1>
+				
             </header>
-            <section>				
-                <div id="container_demo" >
-                    Vous n'avez pas de compte ? 
-                    <a href= "inscription" class="to_register">Créer Un Compte </a>
-                    Vous avez déjà un compte ? 
-                    <a href="connexion" class="to_register"> Connectez vous  </a> 
-                </div>
+                <section>
+                    <div id="Conteneur">
+                        <div id="inscription" >
+                            <h1 >Projet réalisé par Adrien BOURGET - SORY Anas - Pierre-Louis de soultrait </h1>
+                            <img src="images/SoryAnas.PNG" alt="SoryAnas" width="100" height="100">
+                            <img src="images/PierreLouisDeSoultrait.PNG" alt="PierreLouisDeSoultrait" width="100" height="100">
+                            <img src="images/Adrien.PNG" alt="Adrien" width="100" height="100">
+                           
+                                    
+                                </p>
+                                <p class="link">  
+									Vous n'avez pas de compte ? 
+                                    <a href="inscription" > Inscrivez vous  </a>
+                                    <br>Vous avez déjà un compte ? 
+									<a href="connexion" > Connectez vous  </a>
+								</p>
+                               
+								
+                            </form>
+                        </div>
+                        </div>
+                
             </section>
         </div>
-    </body>
-</html>
+    </body> 
